--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="vertical_margin">10dp</dimen>
     <dimen name="horizontal_margin">10dp</dimen>
     <dimen name="text_padding">6sp</dimen>
+    <dimen name="valid_date_text_size">13sp</dimen>
 </resources>
